--- a/templates/Front/Inline/Cart/cartBox.html.twig
+++ b/templates/Front/Inline/Cart/cartBox.html.twig
@@ -42,13 +42,13 @@
                         <ul class="cart-detail">
                             {% for cartItem in cartItems %}
                                 {% set quantifiedItemPrice = orderPreview.quantifiedItemsPrices[loop.index0] %}
-                                <li class="cart-detail__item{% if cartItem.product.isPohodaProductTypeGroup %} cart-detail__item--sets{% endif %}">
+                                <li class="cart-detail__item{% if cartItem.product.isPohodaProductTypeSet %} cart-detail__item--sets{% endif %}">
                                     <div class="cart-detail__item__content">
-                                         {% if cartItem.product.isPohodaProductTypeGroup %}
+                                         {% if cartItem.product.isPohodaProductTypeSet %}
                                             <div class="cart-detail__item__wrap-image">
-                                                {% for productGroup in cartItem.product.productGroups %}
+                                                {% for productSet in cartItem.product.productSets %}
                                                     <div class="cart-detail__item__image cart-detail__item__image--sets svg svg-plus-big">
-                                                        {{ image(productGroup.item.productForCreatingImageAccordingToVariant, {size: 'thumbnail'}) }}
+                                                        {{ image(productSet.item.productForCreatingImageAccordingToVariant, {size: 'thumbnail'}) }}
                                                     </div>
                                                 {% endfor %}
                                             </div>
