--- a/assets/styles/frontend/common/components/list/menu.less
+++ b/assets/styles/frontend/common/components/list/menu.less
@@ -123,7 +123,7 @@
                 left: -@list-menu-item-link-padding;
                 right: -@list-menu-item-link-padding;
                 top: @list-menu-item-height + @list-menu-gap + @list-menu-select-spacer-height;
-                z-index: @z-index-above;
+                z-index: @z-index-menu;
                 padding: 5px 0;
                 min-width: 200px;
 
