--- a/assets/styles/frontend/common/components/list/products.less
+++ b/assets/styles/frontend/common/components/list/products.less
@@ -93,7 +93,7 @@
 
         &__block {
             display: flex;
-            flex: 1;
+            height: 100%;
             flex-direction: column;
             z-index: @z-index-above;
             padding: 5px;
@@ -106,7 +106,6 @@
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
-            flex: 1;
             
             text-decoration: none;
         }
