[TF-624] Show product availability in cart and order depending on items in cart
- before: cart item has always same availability (for sale item and non sale item). For example 'Za tuto cenu jen x ks'
- after: if customer has sale and non sale item it shows for sale item availability 'Za tuto cenu jen x ks' and for non sale item it shows standard product availability or available in days availability

--- a/templates/Front/Content/Cart/index.html.twig
+++ b/templates/Front/Content/Cart/index.html.twig
@@ -85,7 +85,7 @@
                                                 <i class="svg svg-remove"></i>
                                             </a>
                                             <div class="table-cart__cell table-cart__cell--availability">
-                                                {{ productAvailability.productAvailability(cartItem.product) }}
+                                                {{ productAvailability.productAvailability(cartItem.product, cartItem.saleItem) }}
                                             </div>
                                             <div class="table-cart__cell table-cart__cell--price-unit">
                                                 {{ cartItemPrice.unitPrice.priceWithVat|price }}
