--- a/templates/Front/Content/Order/preview.html.twig
+++ b/templates/Front/Content/Order/preview.html.twig
@@ -24,7 +24,7 @@
 
         <div class="list-cart-preview__item__info">
             <div class="list-cart-preview__item__availability">
-                {{ availability.productAvailability(product) }}
+                {{ availability.productAvailability(product, saleItem) }}
             </div>
 
             <div class="list-cart-preview__item__pieces">
