--- a/assets/styles/frontend/common/todo.less
+++ b/assets/styles/frontend/common/todo.less
@@ -13,3 +13,16 @@
         overflow: hidden;
     }
 }
+
+// TODO KOD: https://shopsys.atlassian.net/browse/TF-128
+.box-detail__image__stickers, .list-products__item__image__stickers, .list-products-slider__item__image__stickers {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 100px;
+
+    picture {
+        display: inline-block;
+        margin-bottom: 10px;
+    }
+}
