--- a/templates/Front/Content/Product/boxDetail.html.twig
+++ b/templates/Front/Content/Product/boxDetail.html.twig
@@ -13,7 +13,7 @@
         <div class="web__line">
             <div class="web__container">
                 <div class="box-detail__product{% if typeSet %} box-detail__product--small-gap{% endif %}{% if product.isMainVariant %} box-detail__product--variant{% endif %}">
-                    {# @var \App\Model\Product\Pricing\ProductPrice sellingPrice  #}
+                    {# @var \App\Model\Product\Pricing\ProductPrice sellingPrice #}
                     {% set sellingPrice = getProductSellingPrice(product) %}
 
                     <div class="box-detail__left">
@@ -27,6 +27,15 @@
                                         <a href="{{ imageUrl(product, 'original') }}"
                                         class="{{ showGallery ? 'js-gallery-main-image' : 'js-popup-image' }}">
                                             {{ image(product, { itemprop: 'image' }) }}
+
+                                            {% set stickers = getImages(product, 'sticker') %}
+                                            {% if stickers|length > 0 %}
+                                                <div class="box-detail__image__stickers">
+                                                    {% for sticker in stickers %}
+                                                        {{ image(sticker) }}
+                                                    {% endfor %}
+                                                </div>
+                                            {% endif %}
                                         </a>
                                     {% else %}
                                         {{ noimage({ alt: product.name }) }}
