Disabled indexing for all pages with filters beside brand filter. Page title now includes brands when brand filter is active. Removed /ni/ from addresses with param filters.

--- a/templates/Front/Content/Product/ajaxList.html.twig
+++ b/templates/Front/Content/Product/ajaxList.html.twig
@@ -2,6 +2,8 @@
 
 <input type="hidden" id="js-product-list-ajax-filter-current-url" value="{{ url(getRoute(), getAllRequestParams()) }}">
 <input type="hidden" id="js-product-list-ajax-category-title" value="{{ categoryTitle }}">
+<input type="hidden" id="js-disable-indexing" value="{{ disableIndexing }}">
+
 <div class="box-list__wrap">
     <div class="box-list__panel js-product-list-panel">
         <div class="box-filter js-product-filter">
