--- a/templates/Front/robots.txt.twig
+++ b/templates/Front/robots.txt.twig
@@ -1,5 +1,4 @@
 {% include '@ShopsysFramework/Common/robots.txt.twig' %}
 
 User-agent: *
-Disallow: /*/*/ni/$
-Disallow: /*/*/ni/?*
+Disallow: /*/*/?*product_filter_form*
